@@ -1,6 +1,7 @@
 Kickstart 4.1.2
 ================================================================================
 + By default hide fine tuning options
++ Better detection of the directory holding the archives and the best choice for a temporary directory
 # [MEDIUM] Extracting symlinks in Dry Run mode would cause existing symlinks to be removed
 # [LOW] Kickstart won't start on servers with problematic open_basedir restrictions
 # [LOW] PHP notices when extracting symlinks
